<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#cccccc">

    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gridView"
        android:numColumns="10"
        android:columnWidth="35dp"
        android:gravity="center"
        android:stretchMode="none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:listitem="@android:layout/simple_list_item_1"
        android:layout_below="@+id/spinner"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:transitionGroup="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:verticalSpacing="10dp"
        android:smoothScrollbar="false"
        android:layout_above="@+id/hitsLabel"
        android:layout_marginBottom="15dp"
        android:nestedScrollingEnabled="true"
        android:horizontalSpacing="5dp">
    </GridView>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quitString"
            android:id="@+id/quitButton"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetString"
            android:id="@+id/resetButton"
            android:layout_alignTop="@+id/quitButton"
            android:layout_toEndOf="@+id/quitButton" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hintString"
            android:id="@+id/hintButton"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/resetButton" />
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:layout_alignTop="@+id/hintButton"
            android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Hits"
        android:id="@+id/hitsLabel"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/resetButton"
        android:layout_marginLeft="-25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Misses"
        android:id="@+id/missLabel"
        android:layout_alignTop="@+id/shotsLabel"
        android:layout_toEndOf="@+id/hintButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Shots"
        android:id="@+id/shotsLabel"
        android:layout_marginRight="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Percentage"
        android:id="@+id/percLabel"
        android:layout_alignTop="@+id/missLabel"
        android:layout_alignParentEnd="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/soundSwitch"
        android:checked="true"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/hintButton"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Sound"
        android:id="@+id/textView"
        android:layout_below="@+id/soundSwitch"
        android:layout_alignStart="@+id/soundSwitch"
        android:layout_marginLeft="5dp" />

</RelativeLayout>
